<resources>

    <!--basic-->
    <string name="Yes">네</string>
    <string name="No">아니요</string>
    <string name="Pick">선택</string>
    <string name="Cancel">취소</string>
    <string name="delete">삭제</string>

    <!--Option-->
    <string name="option_sign_out">로그아웃</string>

    <!--Auth-->
    <string name="auth_sign_in_email">이메일</string>
    <string name="auth_sign_in_password">비밀번호</string>
    <string name="auth_custom_sign_in_button">로그인</string>
    <string name="auth_custom_sign_up_button">회원가입</string>

    <string name="auth_custom_sign_up_Uemail">이메일</string>
    <string name="auth_custom_sign_up_Uname">사용자 이름</string>
    <string name="auth_custom_sign_up_Upass">비밀번호</string>
    <string name="auth_custom_sign_up_Upass_re">비밀번호 재입력</string>
    <string name="auth_custom_sign_up_complete">완료</string>

    <string name="auth_custom_sign_up_email_short">이메일 길이가 짧습니다</string>
    <string name="auth_custom_sign_up_name_short">사용자 이름의 길이가 짧습니다</string>
    <string name="auth_custom_sign_up_pass_shoet">비밀번호 길이가 짧습니다</string>>
    <string name="auth_custom_sign_up_pass_dif">입력한 비밀번호가 틀립니다</string>
    <string name="auth_custom_sign_up_email_dif">이메일 형식이 맞지않습니다</string>

    <string name="auth_google_nickName">Picktures Pick 에서 사용할 이름을 정해주세요</string>

    <!--Main-->
    <string name="app_name">픽픽</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section_home">P P</string>
    <string name="section_interest">관심 사진</string>
    <string name="section_popular">인기 사진</string>
    <string name="section_result">내 사진</string>
    <string name="network_connect_failed">네트워크 연결을 확인해 주세요</string>

    <!--Edit image -->
    <string name="edit_tool_next">다음</string>
    <string name="edit_tool_produce">완료</string>
    <string name="edit_tool_pick_photo">사진 선택</string>

    <string name="edit_photo_next_false_comment">2장이상의 사진을 선택해야 \n비교를 할수있어요!</string>


    <string name="edit_option_rating_time">평가 시간</string>
    <string name="edit_option_rep_photo">대표 사진</string>
    <string name="edit_option_recomment_set">댓글 기능</string>
    <string name="edit_option_friend_invisible">친구에게 숨기기</string>
    <string name="edit_option_capture">사진 캡쳐</string>
    <string name="edit_option_mosaic">대표 사진 모자이크</string>>
    <string name="edit_rating_time_select">평가 진행시간 선택</string>>
    <string name="edit_option_comment_hint">욕설 및 상대방에게 불쾌감을 유발하는 내용은 \n삭제될 수 있어요.\n\n\n\n</string>

    <string name="edit_photo_pick_dialog_comment1">번째 비교사진 등록</string>
    <string name="edit_photo_pick_dialog_comment2">더 많은 사진들을\n비교해 보세요!</string>
    <string name="edit_photo_pick_dialog_comment3">구매 하기</string>

    <string name="edit_backPress_title">게시 취소</string>
    <string name="edit_backPress_comment">게시를 취소하시겠습니까?\n입력한 데이터가 모두 사라집니다.</string>


    <!--Interest frag-->
    <string name="inter_tag_non">등록된 관심태그가 없습니다!</string>
    <string name="inter_overlap">이미 등록된 태그입니다!</string>
    <string name="add_tag">태그 추가</string>

    <!--Home frag -->
    <string name="home_no_more_post">더이상 등록된 게시물이 없습니다.</string>
    <string name="home_rating_time_over">평가가 종료되었습니다</string>

    <!--Home frag -->
    <string name="rating_toolbar_title">사진 목록</string>
    <string name="rating_toolbar_pick">선택</string>
    <string name="rating_num_">명 참여 중</string>
    <string name="rating_num_end">명 참여</string>
    <string name="rating_remaining_time">남은시간</string>
    <string name="rating_remaining_hour">시간</string>
    <string name="rating_remaining_min">분</string>
    <string name="rating_posting_before_min">분 전</string>
    <string name="rating_posting_before_hour">시간 전</string>
    <string name="rating_posting_before_day">일 전</string>
    <string name="rating_posting_year">년</string>
    <string name="rating_posting_month">월</string>
    <string name="rating_posting_day">일</string>
    <string name="rating_posting_recomment_num_f">댓글  </string>
    <string name="rating_posting_recomment_num_b">개 보기</string>

    <!--Search frag-->
    <string name="search_actionbar_edittext_hint">태그 검색</string>
    <string name="search_actionbar_searched_tag">최근 검색 태그</string>
    <string name="search_result_non">검색 결과가 없습니다!</string>

    <!--댓글-->
    <string name="send_recomment">  댓글 쓰기</string>
    <string name="recomment_text">댓글</string>


    <!--평가 페이지-->
    <string name="rating_non">사진을 선택후 다시 눌러주세요</string>

    <!--다이얼로그-->
    <string name="delete_post_title">게시물 삭제</string>
    <string name="delete_post">게시물을 삭제하시겠습니까?</string>
    <string name="add_tag_text">관심 태그 추가</string>
    <string name="add_tag_addBtn_text">추가</string>
    <string name="comment_remove">댓글 삭제</string>
    <string name="comment_remove_">댓글을 삭제하시겠습니까?</string>
    <string name="comment_remove_ok">삭제</string>
    <string name="comment_remove_cancel">취소</string>


    <!--프사변경 다이얼로그-->
    <string-array name="profile_image_change">
        <item>갤러리에서 사진 선택</item>
        <!--<item>카메라로 사진 촬영</item>-->
        <item>기본 이미지로 변경</item>
    </string-array>
    <string name="profile_dialog_title">프로필 사진</string>


    <!--스피너 선택창-->
    <string-array name="post_rating_time_list">
        <item>1시간</item>
        <item>3시간</item>
        <item>6시간</item>
        <item>12시간</item>
        <item>24시간</item>
        <item>2일</item>
        <item>3일</item>
    </string-array>


    출처: http://bitsoul.tistory.com/43 [Happy Programmer~]

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_rating_scroll">Home_rating_scroll</string>
    <string name="title_activity_auth__main">Auth_MainActivity</string>
    <string name="title_activity_option_">Option_Activity</string>
    <string name="title_activity_rating_post_recomment__dialog">Rating_post_recomment_Dialog
    </string>
    <string name="title_activity_home_poting_comment_list">Home_poting_comment_list</string>
    <string name="title_activity_post__custom_act">Post_Custom_act</string>
</resources>
