<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.main_user.profile_rating.bottom_menu_activity.Edit_frag_first"
    android:orientation="vertical">
    <EditText
        android:layout_weight="1"
        android:id="@+id/edit_photo_comment"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="top"
        android:text=""
        android:hint="@string/edit_option_comment_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/colorBlack"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:text="@string/edit_option_rep_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_margin= "11dp"
            android:id="@+id/edit_option_rep_photo"
            android:layout_width="80dp"
            android:layout_height="80dp" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="30dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorBlack"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/edit_option_mosaic" />
        <ToggleButton
            android:id="@+id/edit_option_mosaic"
            android:layout_gravity="right|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:paddingLeft="10dp"
            android:text="@string/edit_option_capture"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/edit_option_capture"
            android:layout_gravity="right|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:paddingLeft="10dp"
            android:text="@string/edit_option_recomment_set"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/edit_option_comment"
            android:layout_gravity="right|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:paddingLeft="10dp"
            android:text="@string/edit_option_friend_invisible"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/edit_option_invisible"
            android:layout_gravity="right|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>