<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/auth_sign_up_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/auth_sign_in_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/TextOrIcon"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:text="Pictures Pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="10dp"
                android:padding="10dp"
                android:hint="@string/auth_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:hint="@string/auth_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_margin="10dp"
                android:padding="10dp"
                android:id="@+id/custom_sign_in"
                android:text="@string/auth_custom_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_margin="10dp"
                android:padding="10dp"
                android:id="@+id/custom_sign_up"
                android:text="@string/auth_custom_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.google.android.gms.common.SignInButton
                android:layout_margin="10dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:visibility="gone"
        android:clickable="true"
        android:id="@+id/progressbar_Auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@color/colorBlack_alpha"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent = "true"/>
    </RelativeLayout>
</FrameLayout>
